fixed bugs. added adaptive episodes block

--- a/index.html
+++ b/index.html
@@ -90,31 +90,37 @@
                         <div class="episodes__cards-container__box">
                             <img src="./img/audio_card.svg" alt="" class="episodes__image">
                             <div class="episodes__content-block">
-                                <span class="episodes__tablet">Gear</span>
-                                <div class="episodes__over-title">Episode 3</div>
+                                <div class="episodes__labels-block">
+                                    <span class="episodes__tablet">Gear</span>
+                                    <div class="episodes__over-title">Episode 3</div>
+                                </div>
                                 <h1 class="episodes__content-title">Should you get outboard audio gear?</h1>
                                 <div class="episodes__description">Is hardware really worth it when it comes to podcasting? The answer is...it depends. Here's our reasons on why you might want to consider picking something up.</div>
-                                <a class="episodes__content__button-link buttons-link">View Episode Details</a>           
+                                <a href="" class="episodes__content__button-link buttons-link">View Episode Details</a>           
                             </div>
                         </div>
                         <div class="episodes__cards-container__box">
                             <img src="./img/microphone.svg" alt="" class="episodes__image">
                             <div class="episodes__content-block">
-                                <span class="episodes__tablet">Tips & Tricks</span>
-                                <div class="episodes__over-title">Episode 2</div>
+                                <div class="episodes__labels-block">
+                                    <span class="episodes__tablet">Tips & Tricks</span>
+                                    <div class="episodes__over-title">Episode 2</div>
+                                </div>
                                 <h1 class="episodes__content-title">Mic tricks to take you to the next level</h1>
                                 <div class="episodes__description">Stop rolling with those default settings on your mic. These small tweaks will take you from sounding good to great.</div>
-                                <a class="episodes__content__button-link buttons-link">View Episode Details</a>           
+                                <a href="" class="episodes__content__button-link buttons-link">View Episode Details</a>           
                             </div>
                         </div>
                         <div class="episodes__cards-container__box">
                             <img src="./img/black_boy.svg" alt="" class="episodes__image">
                             <div class="episodes__content-block">
-                                <span class="episodes__tablet">Gear</span>
-                                <div class="episodes__over-title">Episode 1</div>
+                                <div class="episodes__labels-block">
+                                    <span class="episodes__tablet">Gear</span>
+                                    <div class="episodes__over-title">Episode 1</div>
+                                </div>
                                 <h1 class="episodes__content-title">The best microphone under $200</h1>
                                 <div class="episodes__description">With so many microphones on the market, how are you supposed to know what's the best? Take a look at our top picks.</div>
-                                <a class="episodes__content__button-link buttons-link">View Episode Details</a>           
+                                <a href="" class="episodes__content__button-link buttons-link">View Episode Details</a>           
                             </div> 
                         </div>
                         </div>
